--- a/sign.html
+++ b/sign.html
@@ -26,7 +26,7 @@
                 alert("Name must be filled out");
                 return false;
             }
-            else if{
+            else{
                 var y = document.forms["myForm"]["email"].value;
                 var atpos = y.indexOf("@");
                 var dotpos = y.lastIndexOf(".");
@@ -35,10 +35,10 @@
                 return false;
             }
             }
-            else (contact.length!= 10) {
-                alert("contact Invalid");
-                return false;
-            } 
+            // else (contact.length!= 10) {
+            //     alert("contact Invalid");
+            //     return false;
+            // } 
   
     
     
