--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <header>
+        <!-- Created by Devika K H -->
         <img src="Skills360__Logo.png">
         <button type="button" class="btn btn-info button_clr sign_in"><a href="sign.html">SignUp</a></button>
     </header>
@@ -33,7 +34,7 @@
                             <div class="form-group">
                                 <div class="input-group-lg">
                                     <div class="input-group-prepend">
-                                        <label for="usr" style="font-size: 21px;">Username or Email</label><span style="color: red">*</span>
+                                        <label for="usr" style="font-size: 21px;">Email</label><span style="color: red">*</span>
                                     </div>
                                     <input type="text" name="email" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                                 </div>
