--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <!-- Created by Devika K H -->
         <img src="Skills360__Logo.png">
-        <button type="button" class="btn btn-info button_clr sign_in"><a href="sign.html">SignUp</a></button>
+        <button type="button" class="btn btn-info button_clr sign_in"><a href="sign.html">Sign Up</a></button>
     </header>
         <div class="img_class">
             <div class="container back_g" width="50px;">
@@ -44,10 +44,10 @@
                                     <div class="input-group-prepend">
                                         <label for="usr" style="font-size: 21px;">Password</label><span style="color: red">*</span>
                                     </div>
-                                    <input type="text" name="pwd" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+                                    <input type="password" name="pwd" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                                 </div>
                             </div>
-                            <button type="sumbit" value="Submit" class="btn btn-info button_clr">Login</button>
+                            <button type="sumbit" value="Submit" class="btn btn-info button_clr">Log In</button>
                             <a href="#" class="forgot-password-link">
                                 <span style="color:blue">Forgot Password?</span>
                             </a>
