--- a/sign.html
+++ b/sign.html
@@ -19,7 +19,7 @@
     <header>
         <!-- Created by Devika K H -->
         <img src="Skills360__Logo.png">
-        <button type="button" class="btn btn-info button_clr sign_in"><a href="index.html">SignIn</a></button>
+        <button type="button" class="btn btn-info button_clr sign_in"><a href="index.html">Sign In</a></button>
     </header>
     <div class="col-md-12">
         <div class="img_class">
@@ -28,7 +28,7 @@
                     <h1 class="little-big-header">Welcome</h1>
                     <div class="space"></div>
                     <div class="container">
-                    <form name="myForm" onsubmit="return validateForm()">
+                    <form name="myForm" onsubmit="return validateForm()" action="index.html">
 
                         <div class="form-group">
                             <div class="input-group input-group-lg">
@@ -44,7 +44,7 @@
                                 <div class="input-group-prepend">
                                     <label for="usr" style="font-size: 21px;">Enter your Email</label><span style="color: red">*</span>
                                 </div>
-                                <input type="text" name="email" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+                                <input type="email" name="email" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                             </div>
                         </div>
 
@@ -53,7 +53,7 @@
                                 <div class="input-group-prepend">
                                     <label for="usr" style="font-size: 21px;">Password</label><span style="color: red">*</span>
                                 </div>
-                                <input type="text" name="pwd" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+                                <input type="password" name="pwd" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                             </div>
                         </div>
 
@@ -62,10 +62,10 @@
                                 <div class="input-group-prepend">
                                     <label for="usr" style="font-size: 21px;">Contact Number</label><span style="color: red">*</span>
                                 </div>
-                                <input type="text" name="contact" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+                                <input type="number" name="contact" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
                             </div>
                         </div>
-                        <button class="btn btn-info button_clr" type="submit" value="Submit">SignUp</button>
+                        <button class="btn btn-info button_clr" type="submit" value="Submit">Sign Up</button>
 
                     </form>
                 </div>
